--- a/app/Scanner/index.erb
+++ b/app/Scanner/index.erb
@@ -1,13 +1,20 @@
 <div data-role="page">
 
   <div data-role="header" data-position="inline">
-    <h1>Scanners</h1>
+    <h1>Barcode Scanner</h1>
     <a href="<%= Rho::RhoConfig.start_path %>" class="ui-btn-left" data-icon="home" data-direction="reverse">Home</a>
     <a href="<%= url_for :action => :new %>" class="ui-btn-right" data-icon="plus">New</a>
   </div>
 
   <div data-role="content">
     <ul data-role="listview">
+
+      <li>
+        <a href="<%= url_for :action => :edit %>">
+          <span class="title">Choose Barcode</span>
+          <span class="disclosure_indicator"></span>
+        </a>
+      </li>
 
       <% if System::get_property('has_camera') %>
         <li>
@@ -16,6 +23,18 @@
             <span class="disclosure_indicator"></span>
           </a>
         </li>
+
+<!--
+        <% if System::get_property('platform') == 'ANDROID' or System::get_property('platform') == 'APPLE'%>
+          <li>
+            <a href="<%= url_for :action => :scan_barcode %>">
+              <span class="title">Real-time Barcode Scan</span>
+              <span class="disclosure_indicator"></span>
+            </a>
+          </li>
+        <% end %>
+-->
+
       <% end %>
     </ul>
   </div>
